3.2 regression: deforming modifiers have stopped displaying original faces with on cage option enabled. #99253

Closed
opened 2022-06-28 23:01:18 +02:00 by Michael Soluyanov · 12 comments

System Information
Operating system: Linux-5.13.0-52-generic-x86_64-with-glibc2.34 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.129.06

Blender Version
Broken: 3.2.0. Caused by 8c25889bb6
Worked: 2.80-3.1

Short description of error
In this example, we have subsurf and curve modifier. Since 2.80 curve modifier displays original faces like if only subsurf is enabled:

image.png

But after 3.2 there was a regression which makes on cage behave like 2.79:

image.png

Exact steps for others to reproduce the error
Open the file:
untitled2.blend

**System Information** Operating system: Linux-5.13.0-52-generic-x86_64-with-glibc2.34 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.129.06 **Blender Version** Broken: 3.2.0. Caused by 8c25889bb6 Worked: 2.80-3.1 **Short description of error** In this example, we have subsurf and curve modifier. Since 2.80 curve modifier displays original faces like if only subsurf is enabled: ![image.png](https://archive.blender.org/developer/F13235280/image.png) But after 3.2 there was a regression which makes on cage behave like 2.79: ![image.png](https://archive.blender.org/developer/F13235259/image.png) **Exact steps for others to reproduce the error** Open the file: [untitled2.blend](https://archive.blender.org/developer/F13235287/untitled2.blend)
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz

#100331 was marked as duplicate of this issue

#100331 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm that face dots lose information on where they should appear.
Investigating...

I can confirm that face dots lose information on where they should appear. Investigating...

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly

Regression introduced in 8c25889bb6
Cc @HooglyBoogly

Regression introduced in 8c25889bb6 Cc @HooglyBoogly
Hans Goudey self-assigned this 2022-07-06 06:07:14 +02:00
Member

I looked into this and didn't find any solution yet. My guess is that something is duplicating the mesh after subdivision so the final doesn't have the subsurf face dot tags, but I didn't see that happening.
I'll claim the task though so I don't forget to look into it again though.

I looked into this and didn't find any solution yet. My guess is that something is duplicating the mesh after subdivision so the final doesn't have the subsurf face dot tags, but I didn't see that happening. I'll claim the task though so I don't forget to look into it again though.
Member

Added subscriber: @Vir

Added subscriber: @Vir
Member

I found a simple somewhat hacky but harmless fix to this in the mesh modifier stack. I'll upload it soon, traveling now though.

I found a simple somewhat hacky but harmless fix to this in the mesh modifier stack. I'll upload it soon, traveling now though.

This issue was referenced by 3306b4a86b

This issue was referenced by 3306b4a86bb8dcb0a1640fc73c355e5fff9073a7
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99253
No description provided.